--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # SITE CONFIGURATION
 baseurl: "" # the subpath of your site, e.g. /blog/ (optional)
 url: "http://www.your-domain.com" # the base hostname & protocol for your site
+encoding: utf-8
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
